# ai-workflow-engine

./: .gitignore  API-CONTRACT.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  m7_plan.md  phase3_plan.md  pyproject.toml  pytest.ini  test_session_store.py
.github/ISSUE_TEMPLATE/: architecture_question.yml  bug_report.yml  config.yml  feature_request.yml
aiwf/: __main__.py  cli.py
aiwf/application/: approval_config.py  approval_handler.py  approval_specs.py  artifact_writer.py  config_loader.py  config_models.py  context_validation.py  prompt_assembler.py  prompt_builder.py  standards_materializer.py  standards_provider.py  transitions.py  workflow_orchestrator.py
aiwf/domain/: constants.py  errors.py  generation_step.py  template_renderer.py
aiwf/engine/: file_io.py
docker/postgres/: README.md  docker-compose.yml
docs/: ARCHITECTURE.md  CONCEPTS.md  EXTENDING.md  TODO-project-dir.md  jpa-mt-cr-req.md  m5_plan_v2.md  m6_plan.md  m7_plan.md  m_7_implementation_plan.md  provider-implementation-guide.md  roadmap.md  test-coverage-plan.md
docs/adr/: 0001-architecture-overview.md  0002-template-layering-system.md  0003-workflow-state-validation.md  0004-structured-review-metadata.md  0004_structured_review_metadata.md  0005-approval-handler-chain.md  0006-observer-pattern-events-v2.md  0007-plugin-architecture.md  README.md  (+12 more)
profiles/: __init__.py  config.md
scripts/: extract_code_manual.py  render_prompts_manual.py
tests/: __init__.py  conftest.py  test-planning-prompt.md  test_phase2_smoke.py  test_session_store.py
(+284 files in other folders)
