[tool.poetry]
packages = [{include = "aiwf"}]

[project]
name = "ai-workflow-engine"
version = "1.0.0"
description = "AI-assisted development workflow orchestration"
authors = [
    {name = "\"Scott Mulcahy\""}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic (>=2.12.5,<3.0.0)",
    "click (>=8.3.1,<9.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.1,<10.0.0)",
    "mypy (>=1.19.0,<2.0.0)",
    "ruff (>=0.14.8,<0.15.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]

[tool.poetry.scripts]
aiwf = "aiwf.interface.cli.cli:cli"

[project.entry-points."aiwf.profiles"]
jpa-mt = "profiles.jpa_mt:register"